--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+body {
+  margin: 0;
+}
+
 img {
   margin: 40px 0 0 25px;
 }
@@ -15,40 +19,41 @@ p {
   margin: 40px 35px 70px 25px;
 }
 
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 7% 25%;
+  justify-content: center;
+}
+
+.sub-container {
+  height: 28.16rem;
+  width: 15.88rem;
+}
+
 .left-container {
-  height: 450px;
-  width: 250px;
   background-color: #e38126;
-  position: relative;
-  left: 250px;
-  top: 150px;
+  left: 15.63rem;
+  top: 9.38rem;
   border-radius: 10px 0 0 10px;
 }
 
 .middle-container {
-  height: 450px;
-  width: 250px;
   background-color: #006970;
-  position: relative;
-  left: 500px;
-  bottom: 300px;
-
+  left: 31.25rem;
+  bottom: 18.75rem;
 }
 
 .right-container {
-  height: 450px;
-  width: 250px;
   background-color: #004241;
-  position: relative;
-  left: 750px;
-  bottom: 750px;
+  left: 46.88rem;
+  bottom: 46.88rem;
   border-radius: 0 10px 10px 0;
-
 }
 
 button {
-  height: 40px;
-  width: 115px;
+  height: 2.5rem;
+  width: 7.19rem;
   border: 1.9px solid white;
   border-radius: 25px;
   margin-left: 25px;
@@ -58,4 +63,22 @@ button:hover {
   background: Transparent;
   color: white;
 
+}
+
+
+/* media section */
+
+@media (max-width:900px) {
+  .grid-container {
+    grid-template-columns: 1fr;
+    justify-content: center;
+  }
+
+  .left-container {
+    border-radius: 10px 10px 0 0;
+  }
+
+  .right-container {
+    border-radius: 0 0 10px 10px;
+  }
 }
